syntax = "proto3";

package auth;

option go_package = "/auth";

import "google/protobuf/timestamp.proto";

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  User user = 2;
}

message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message CheckRequest {
  string token = 1;
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (LoginResponse);
  rpc Check(CheckRequest) returns (LoginResponse);
}